@@ -149,8 +149,8 @@ svg.c3.global {
   display: none;
   position: fixed;
   z-index: 1000;
-  margin-top: 0.5em;
-  margin-left: -0.75em;
+  margin-top: -0.5em;
+  margin-left: 0.5em;
   min-width: 3em;
   padding: 0.25em;
   border-radius: 0.25em;
@@ -165,9 +165,10 @@ svg.c3.global {
   position: absolute;
   width: 0;
   height: 0;
-  top: -1em;
-  border: 0.5em solid transparent;
-  border-bottom-color: wheat;
+  left: -0.5em;
+  border-top: 0.5em solid transparent;
+  border-bottom: 0.5em solid transparent;
+  border-right: 0.5em solid wheat;
 }
 html.grabbing,
 html.grabbing * {
